[gd_scene load_steps=5 format=3 uid="uid://p648t4h3rgch"]

[ext_resource type="Script" path="res://objects/full/waterScale/waterScale.gd" id="1_81738"]
[ext_resource type="Texture2D" uid="uid://i2n7uwr0ls7n" path="res://objects/full/waterScale/waterScale.png" id="1_dvvv3"]
[ext_resource type="Texture2D" uid="uid://c407qbv0ytnat" path="res://objects/full/waterScale/left.png" id="2_n6v6s"]
[ext_resource type="Texture2D" uid="uid://lq70c2yb6h8b" path="res://objects/full/waterScale/right.png" id="3_oh2db"]

[node name="WaterScale" type="Node2D"]
script = ExtResource("1_81738")

[node name="WaterScale" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(150, 38)
texture = ExtResource("1_dvvv3")

[node name="HP1" type="Sprite2D" parent="."]
position = Vector2(-50, 38)
texture = ExtResource("2_n6v6s")

[node name="HP2" type="Sprite2D" parent="HP1"]
position = Vector2(40, 0)
texture = ExtResource("2_n6v6s")

[node name="HP3" type="Sprite2D" parent="HP1/HP2"]
position = Vector2(40, 0)
texture = ExtResource("2_n6v6s")

[node name="HP4" type="Sprite2D" parent="HP1/HP2/HP3"]
position = Vector2(40, 0)
texture = ExtResource("2_n6v6s")

[node name="HP5" type="Sprite2D" parent="HP1/HP2/HP3/HP4"]
position = Vector2(40, 0)
texture = ExtResource("3_oh2db")

[node name="HP6" type="Sprite2D" parent="HP1/HP2/HP3/HP4/HP5"]
position = Vector2(40, 0)
texture = ExtResource("3_oh2db")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
